# ASanExample

./: sanitize-setup-script
app/src/main/cpp/: CMakeLists.txt
app/src/sanitize/resources/lib/arm64-v8a/: wrap.sh
